<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_20">

    <LinearLayout
        android:id="@+id/notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_item_selector"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12">

        <ImageView
            android:id="@+id/iv_notes"
            android:layout_width="@dimen/padding_20"
            android:layout_height="@dimen/padding_20"
            android:contentDescription="@string/text_notes_icon"
            android:src="@drawable/ic_notes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/text_all_notes"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminders_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_item_selector"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12">

        <ImageView
            android:id="@+id/iv_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reminders_black"
            android:contentDescription="@string/text_reminder_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/text_reminders"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

</LinearLayout>
