<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_20">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="?attr/colorSecondary" />

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:contentDescription="@string/text_settings_icon"
            android:src="@drawable/ic_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/text_settings"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_and_support_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_12">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:contentDescription="@string/text_help_and_support_icon"
            android:src="@drawable/ic_help_and_support" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/text_help_support"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

</LinearLayout>
