<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_20">

        <ImageButton
            android:id="@+id/btnBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/text_back_button"
            android:src="@drawable/ic_arrow_right" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_select_note"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_done"
            android:textColor="@color/tabSelectedTextColorLight"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginVertical="@dimen/margin_8"
        app:cardCornerRadius="@dimen/radius_12"
        app:cardElevation="@dimen/elevation_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/padding_12">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:layout_marginStart="@dimen/margin_10"
                android:contentDescription="@string/text_search_icon"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:hint="@string/text_search_your_notes"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_400"
                android:textCursorDrawable="@drawable/search_cursor"
                android:textSize="@dimen/text_16" />

            <ImageButton
                android:id="@+id/btnClearSearch"
                android:layout_width="@dimen/size_24"
                android:layout_height="@dimen/size_24"
                android:layout_marginEnd="@dimen/margin_10"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/text_close"
                android:src="@drawable/ic_close"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutEmptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_32"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvEmptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/text_no_notes_available"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tvEmptyDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/text_create_a_note_first_then_come_back_here"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/padding_8" />

</LinearLayout>